syntax = "proto3";
option go_package = "./proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package users;

service Users {
  rpc AddUser(AddUserMessage) returns (User) {
    option (google.api.http) = {
      post: "/users"
      body: "*"
    };
  }

  rpc DeleteUser(DeleteUserMessage) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/users/{id}"
    };
  }

  // Replaces the user in DB with newly provided one.
  rpc UpdateUser(UpdateUserMessage) returns (User) {
    option (google.api.http) = {
      put: "/users/{id}"
      body: "*"
    };
  }

  rpc SearchUser(SearchUserMessage) returns (SearchUserResponse) {
    option (google.api.http) = {
      get: "/users:search"
    };
  }
}

message SearchUserResponse {
  repeated User users = 1;
}

message UserFilters {
  string country = 1;
}

message SearchUserMessage {
  UserFilters filters = 1;
  int32 page_size = 2;
  int32 page = 3;
}

message UpdateUserMessage {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string country = 5;
  string password = 6;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string country = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message AddUserMessage {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string country = 4;
  string password = 5;
}

message DeleteUserMessage {
  string id = 1;
}
